# candlekeep-desktop

./: CLAUDE.md  biome.json  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml  version-bump.yml
docs/: cross-platform-plan.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  updater.rs
src-tauri/src/commands/: cli.rs  metrics.rs  mod.rs  plugin.rs  system.rs
src-tauri/src/integrations/: amp.rs  claude_code.rs  codex.rs  cursor.rs  mod.rs  opencode.rs
src-tauri/src/platform/: installer.rs  mod.rs  paths.rs  shell.rs  tray.rs
src/components/: IntegrationCard.tsx  MetricsCard.tsx  QuickActions.tsx  StatusCard.tsx  UpdateBanner.tsx
src/hooks/: useCliStatus.ts  useIntegrations.ts  useMetrics.ts  usePluginStatus.ts
src/lib/: tauri-commands.ts  types.ts
src/pages/: Dashboard.tsx  Integrations.tsx  ReleaseNotes.tsx  Settings.tsx  Setup.tsx
