[package]
name = "candlekeep-desktop"
version = "1.2.3"
description = "CandleKeep desktop app for managing CLI, plugins, and integrations"
authors = ["CandleKeep <support@getcandlekeep.com>"]
edition = "2021"

[lib]
name = "candlekeep_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "process"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
dirs = "6"
semver = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
open = "5"
zip = "2"
flate2 = "1"
tar = "0.4"
